# ChangeLog for media-sound/pragha
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/pragha/ChangeLog,v 1.11 2012/05/22 05:23:13 jdhore Exp $

  22 May 2012; Jeff Horelick <jdhore@gentoo.org> pragha-1.0.1.ebuild:
  marked x86 per bug 416233

  20 May 2012; Agostino Sarubbo <ago@gentoo.org> pragha-1.0.1.ebuild:
  Stable for amd64, wrt bug #416223

  05 May 2012; Michał Górny <mgorny@gentoo.org> pragha-1.0_rc3.ebuild,
  pragha-1.0.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*pragha-1.0.1 (15 Mar 2012)

  15 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +pragha-1.0.1.ebuild:
  Version bump.

  10 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> -pragha-1.0_rc2.ebuild:
  old

  10 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> pragha-1.0_rc3.ebuild:
  x86 stable wrt #401229

  07 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> pragha-1.0_rc3.ebuild:
  Punt USE="minimal" to unbreak the build wrt #402349 by Myckel Habets

  30 Jan 2012; Agostino Sarubbo <ago@gentoo.org> pragha-1.0_rc3.ebuild:
  Stable for amd64, wrt bug #401229

*pragha-1.0_rc3 (23 Dec 2011)

  23 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +pragha-1.0_rc3.ebuild:
  Version bump.

*pragha-1.0_rc2 (18 Nov 2011)

  18 Nov 2011; Samuli Suominen <ssuominen@gentoo.org> +pragha-1.0_rc2.ebuild:
  Initial commit wrt #295323 by Marco Simeone and Fabian Köster
