@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST pragha-1.0.1.tar.bz2 547014 RMD160 9005dc4a783e2c766b54d3fc4c65bb44ab21949e SHA1 607e54233305d6774dcd66327969533b6f2c6847 SHA256 1345fbd7f38c54dbb83e9c1e2742d7844458f344ecb57418e73bcac723a204eb
-DIST pragha-1.0.rc3.tar.bz2 530256 RMD160 b51cf393c78ffba5fabd2dc94e497e19d4716e2a SHA1 66ec776352d2e20d91feee16229e87421890da10 SHA256 a59e52437e6789b19ba07f9426bdee220e2517b1cdf60a102cf3da0b6a115a6d
 EBUILD pragha-1.0.1.ebuild 1404 RMD160 313c016eac0230c28f05b186852d850a3f80695f SHA1 858b8f7144aee4cfd365364b38047c0b69907328 SHA256 6566ab11883bb2bc6271011db3503134e6ccc9c298fd2a8fcce9bf480a86faac
-EBUILD pragha-1.0_rc3.ebuild 1392 RMD160 b9eb0341779fb713b508eaebe1e4fb85baa9e2e2 SHA1 38222042e77bc9c0a1099707438fffd14adb545f SHA256 24a13badeb1af1e0b3bb7d82fb9e99086e1d3ee648a8b4c4a9ba3c7a0357ded7
-MISC ChangeLog 1424 RMD160 8b61559f6733d07b3f3c899a203ded84dba7a553 SHA1 ad4a1a30e01d28bc198bec3813231bf3e15bb4ba SHA256 8b7beee26f4ae8ceab364c6a36531a75c5f229701ade11037c54f0f0a9ba2334
+MISC ChangeLog 1512 RMD160 263631cb4fd03f7fb6c7cbdd0c530cfe3cd31956 SHA1 51623080cbf7c4f895fa60a035c462ef20ef14b6 SHA256 6cec78c176b90443648abd7952c41fbcb03710416bc391a0e940c4bf801d2bfd
 MISC metadata.xml 374 RMD160 3f6b86ded87e0a678f1aa83c9e60189da1d5b8f1 SHA1 3f5fb4c8f46bdca45d80ace10873dbfda6092b91 SHA256 cf18ccf763f6cdaab52606478be67b2f4b9703cbba02ffadbbd7539b68c102f0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBAgAGBQJPuzQCAAoJEEdUh39IaPFNgh0H/RXxpOAd/kIJFVD2WpptHcmV
+xHsuICyuTWE7tLo91t3w5lv1T/K7PDaIWK/9oV+PcIIYdvJCtOFDjI/C1/RmgFc6
+iYP0bUtcjMkIRbKdfaaQJ3iX43CiXnPqmhTaHoOyPqHw9RznE3E7USLGIBB8Almw
+AkFdWWmRap8WiTMRydLSQpb3rRruY8cv65aP6hZpHEUpGB0ZcbqBCRK1llHauOTl
+tEQhkiXRXc4Cjgcq7rt1CiX/WN2Wnn6LV5/ql8eyL1/t9krs/4SyEijzb6En0O7i
+BD4G/88+uHrd89zRbMGCyeFZhXV0FzPNZR3jcJkjql8vK69TQZe/NBmxmSSUoE8=
+=wuQX
+-----END PGP SIGNATURE-----
